<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.harrypottertrivia.MainActivity">

        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:text="@string/welcome_msg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!--Question1-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q1_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option1" />

                <RadioButton
                    android:id="@+id/q1_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option2" />

                <RadioButton
                    android:id="@+id/q1_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_option3" />

                <RadioButton
                    android:id="@+id/q1_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/q1_option4" />
            </RadioGroup>

            <!--Question 2-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <EditText
                android:id="@+id/q2_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/q2_hintText" />

            <!--Question 3-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q3_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option1" />

                <RadioButton
                    android:id="@+id/q3_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option2" />

                <RadioButton
                    android:id="@+id/q3_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q3_option3"/>

                <RadioButton
                    android:id="@+id/q3_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/q3_option4"/>
            </RadioGroup>

            <!--Question 4-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4"/>

            <CheckBox
                android:id="@+id/q4_ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option1"/>

            <CheckBox
                android:id="@+id/q4_ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option2" />

            <CheckBox
                android:id="@+id/q4_ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option3" />

            <CheckBox
                android:id="@+id/q4_ans4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_option4" />

            <CheckBox
                android:id="@+id/q4_ans5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/q4_option5" />

            <!--Question 5-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q5_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option1" />

                <RadioButton
                    android:id="@+id/q5_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option2" />

                <RadioButton
                    android:id="@+id/q5_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q5_option3"/>

                <RadioButton
                    android:id="@+id/q5_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/q5_option4"/>

            </RadioGroup>

            <!-- Question 66 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q6_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_option1" />

                <RadioButton
                    android:id="@+id/q6_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_option2" />

                <RadioButton
                    android:id="@+id/q6_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q6_option3"/>

                <RadioButton
                    android:id="@+id/q6_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/q6_option4"/>

            </RadioGroup>

            <!-- Question 7 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_7"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q7_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q7_option1" />

                <RadioButton
                    android:id="@+id/q7_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/q7_option2" />
            </RadioGroup>

            <!-- Question 8 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_8"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q8_ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q8_option1" />

                <RadioButton
                    android:id="@+id/q8_ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q8_option2" />

                <RadioButton
                    android:id="@+id/q8_ans3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q8_option3"/>

                <RadioButton
                    android:id="@+id/q8_ans4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/q8_option4"/>

            </RadioGroup>

            <!-- Question 9 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_9"/>

            <CheckBox
                android:id="@+id/q9_ans1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_option1"/>

            <CheckBox
                android:id="@+id/q9_ans2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_option2" />

            <CheckBox
                android:id="@+id/q9_ans3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_option3" />

            <CheckBox
                android:id="@+id/q9_ans4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_option4" />

            <CheckBox
                android:id="@+id/q9_ans5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_option5" />

            <CheckBox
                android:id="@+id/q9_ans6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q9_option6" />

            <CheckBox
                android:id="@+id/q9_ans7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/q9_option7" />

            <!-- Question 10 -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_10" />

            <EditText
                android:id="@+id/q10_ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/q2_hintText" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/submit_quiz"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>


